2004-07-11  Karl Berry  <karl@gnu.org>

	* makeinfo/node.c (split_file): fwrite Local Variables trailer so
		it actually gets into the output of the top-level info
		file; don't just insert_string.  
	Report from: Werner LEMBERG, 11 Jul 2004 08:58:13 +0200.

2004-07-10  Karl Berry  <karl@gnu.org>

        * util/texi2pdf: new script.
        * util/Makefile.am: install it.
        * doc/texinfo.txi: document it.

2004-07-05  Karl Berry  <karl@gnu.org>

	* makeinfo/xref.c (cm_email, cm_uref, et al.): 
	* makeinfo/xml.c (xml_insert_indexentry, xml_insert_indexterm):
	* makeinfo/sectioning.c (sectioning_underscore):
	* makeinfo/makeinfo.c (cm_listoffloats): use %s, don't pass string to
		execute_string.  Report from Christian Schenk.

2004-07-02  Karl Berry  <karl@gnu.org>

	* makeinfo/makinfo.c (execute_string): don't worry about
		mismatched multiline commands if executing_macro.

2004-06-27  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex: Various doc fixes.
	(\dosubindsanitize): propagate the same penalty
	>10000, don't just use \nobreak.
	(\sectionheading): insert a final penalty of
	10001, not 10000.  This causes \aboveenvbreak to
	insert \parskip glue, cancelling the
	\vskip-\parskip done here.  Otherwise, when (e.g.)
	@section is followed immediately by @example, the
	example can be shrunk up above the section title.

2004-06-14  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\commondummies, \indexnofonts): dummy-up @comma.
	Report from Arnold.

2004-06-06  Karl Berry  <karl@gnu.org>

	* makeinfo/index.c (index_add_arg): ensure all elements are always
	initialized, including output_file, section, and section_name.
	(cm_printindex): don't pass index->output_file to
	add_html_block_elt_args if it is null.  Also do
	not pass spurious extra index_name argument.

	* makeinfo/makeinfo.c (add_char): don't call html_output_head if
	only_macro_expansion (e.g., a macro call in the
	Top menu).  From: Yuri D'Elia <wavexx@yuv.info>,
	05 Jun 2004 21:11:00 +0200.
